exports[`react-z-order should be stable 1`] = `
<g>
  <circle
    x={10} />
  <circle
    x={30} />
  <circle
    x={20} />
</g>
`;

exports[`react-z-order should render at all 1`] = `<g />`;

exports[`react-z-order should sort 1`] = `
<g>
  <circle
    x={10} />
  <circle
    x={20} />
  <circle
    x={30} />
  <circle
    x={40} />
</g>
`;
